# deeptime

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  MANIFEST.in  README.md  README.rst  ReleaseChecklist.md  ThirdPartyNotices.txt  __init__.py  _version.py  azure-cibuildwheel.yml  azure-pipelines.yml  conanfile.py  data_in_memory.py  datasource.py  dev_readme.rst  feature_reader.py  featurizer.py  file_reader.py  fragmented_trajectory_reader.py  frames_from_file.py  h5_reader.py  interface.py  iterable.py  joiner.py  lagged_correlation.py  moments.py  noxfile.py  numpy_filereader.py  py_csv_reader.py  pyproject.toml  random_accessible.py  reader_interface.py  running_moments.py  setup.cfg  setup.py  (+6 more)
deeptime/basis/: CMakeLists.txt  __init__.py  _base.py  _monomials.py  base.py  monomials.py  setup.py
deeptime/basis/src/: basis_bindings.cpp
deeptime/data/: CMakeLists.txt  __init__.py  _bickley_simulator.py  _birth_death_chain.py  _datasets.py  _double_well.py  _drunkards_walk_simulator.py  _pbf_simulator.py  _systems.py  _util.py  bickley_simulator.py  birth_death_chain_dataset.py  datasets.py  double_well_dataset.py  drunkards_walk_simulator.py  ellipsoids_dataset.py  pbf_simulator.py  setup.py  util.py
deeptime/data/data/: double_well_discrete.npz
deeptime/data/include/: boundary_conditions.h  integrator.h  pbf.h  periodic_boundary.h  systems.h
deeptime/data/src/: data_module.cpp  systems.cpp
deeptime/markov/: CMakeLists.txt  __init__.py  _base.py  _discrete_states.py  _girsanov_reweighted_transition_counting.py  _observables.py  _pcca.py  _reactive_flux.py  _sample.py  _transition_counting.py  _transition_matrix.py  _util.py  cset.py  pcca.py  reactive_flux.py  sample.py  setup.py  transition_counting.py  util.py
deeptime/markov/_bindings/: CMakeLists.txt
deeptime/markov/hmm/: CMakeLists.txt  __init__.py  _bayesian_hmm.py  _hidden_markov_model.py  _maximum_likelihood_hmm.py  _output_model.py  bayesian_hmm.py  hidden_markov_model.py  maximum_likelihood_hmm.py  output_model.py  setup.py  util.py
deeptime/markov/msm/: __init__.py  _augmented_msm.py  _bayesian_msm.py  _koopman_reweighted_msm_impl.py  _markov_state_model.py  _maximum_likelihood_msm.py  _multi_ensemble_markov_model.py  _tram.py  augmented_msm.py  bayesian_msm.py  koopman_reweighted_msm.py  markov_state_model.py  maximum_likelihood_msm.py  setup.py
deeptime/markov/plot/: __init__.py  implied_timescales.py
deeptime/markov/plots/: __init__.py  implied_timescales.py
deeptime/markov/sample/: __init__.py
deeptime/markov/tools/: README.md  __init__.py  setup.py
deeptime/numeric/: .gitignore  CMakeLists.txt  __init__.py  _eigen.py  _norm.py  _utils.py  eig_qr.c  eig_qr.pyx  eigen.py  setup.py  utils.py
deeptime/numeric/_bindings/: CMakeLists.txt
sktime_api_draft/data/: CMakeLists.txt  bindings.cpp  dataset.py
sktime_api_draft/data/test/: CMakeLists.txt  main.cpp
src/deeptime/numeric/: CMakeLists.txt  __init__.py
tests/: CMakeLists.txt  __init__.py  benchmark_moments.py  bla.cpp  catch_main.cpp  conftest.py  demo.py  playground.py  requirements.txt  test_running_moments.py  testing_utilities.py  util.py
tests/analysis/: test_decomposition.py  test_fingerprints.py  test_mfpt.py  test_sensitivity.py
tests/base/: test_base_interface.py  test_base_utils.py  test_cached_property.py  test_capi.py  test_dl_utils.py  test_immutale_data.py  test_pickling.py  test_pytorch_setup.py  test_sklearn_compat.py
tests/basis/: test_base.py  test_monomials.py
tests/clustering/: test_box_discretization.py  test_clustering.py  test_kmeans.py  test_mini_batch_kmeans.py  test_regspace.py  util.py
tests/covariance/: test_covar_estimator.py  test_moments.py  test_running_moments.py  test_util.py
tests/data/: hmm-doublewell-2d-100k.npz  test_bd_chain.py  test_cpp_systems.py  test_double_well.py  test_drunkards_walk.py  test_ellipsoids.py  test_metropolis1d.py  test_n_well.py  test_pbf.py  test_prinz.py  test_quadruple_well.py  test_sqrt_model.py  test_swissroll.py  test_util.py
tests/decomposition/: test_dmd.py  test_edmd.py  test_kcca.py  test_kedmd.py  test_koopman_reweighting.py  test_kvadnet.py  test_score.py  test_tae.py  test_tica.py  test_utils.py  test_vamp.py  test_vampnet.py
tests/decomposition/data/: test_data_koopman.npz
tests/dtraj/: test_trajectory.py
tests/dtraj/testfiles/: dtraj.npy
tests/estimation/tests/: test_connectivity.py  test_count_matrix.py  test_prior.py
tests/flux/: test_tpt.py
tests/flux/impl/: reactive_flux_test.py
tests/kernels/: test_gaussian.py  test_kernels.py  test_kernels_torch.py
tests/markov/: factory.py  test_bayesian_msm.py  test_cktest.py  test_discrete_states.py  test_girsanov_reweighted_transition_counting.py  test_reactive_flux.py  test_sample.py  test_transition_counts.py
tests/markov/hmm/: test_bayesian_hmm.py  test_init_hmm.py  test_integration.py  test_mlhmm.py  test_output_models.py
tests/markov/msm/: conftest.py  test_amm.py  test_bayesian_msm.py  test_markov_state_model.py  test_mlmsm.py  test_msm.py  test_msm_basic_properties.py  test_oom.py  test_tram.py  test_tram_datatset.py  test_tram_model.py  util.py
tests/markovprocess/: datasets.py  double_well_data.py  factory.py  test_bayesian_hmsm.py  test_bayesian_msm.py  test_cktest.py  test_discrete_trajectories.py  test_hmsm.py  test_hmsm_highlevel.py  test_markov_state_model.py  test_msm.py  test_reactive_flux.py  test_sample.py  test_transition_counts.py
tests/numeric/: test_kahan_summation.py  test_norm.py  test_slepc.py  test_utils.py
tests/plots/: plot_network.py  test_ck_test.py  test_contour.py  test_energy_surface.py  test_implied_timescales.py  test_network.py
tests/sindy/: test_sindy.py
tests/src/: test_TRAMInput.cpp  test_common_utilities.cpp  test_kahan_summation.cpp  test_swap_arr.cpp  test_tram.cpp  test_traminput.cpp
tests/util/: matrix_test.py  test_data.py  test_decorators.py  test_diff.py  test_parallel.py  test_pytorch.py  test_quantity_statistics.py  test_sparse_utils.py  test_stats.py  test_types.py
(+1177 files in other folders)
