[project]
name = "deeptime"
readme = "README.md"
description = "Python library for analysis of time series data including dimensionality reduction, clustering, and Markov model estimation."
keywords = [
    "markov-model", "hidden-markov-model", "time-series-analysis", "covariance-estimation",
    "koopman-operator", "coherent-set-detection"
]
authors = [
    {name = 'Moritz Hoffmann'},
    {name = 'Martin Scherer'},
    {name = 'Tim Hempel'},
    {name = 'Andreas Mardt'},
    {name = 'Maaike Galama'},
    {name = 'Brian de Silva'},
    {name = 'Brooke Husic'},
    {name = 'Stefan Klus'},
    {name = 'Hao Wu'},
    {name = 'Nathan Kutz'},
    {name = 'Steven Brunton'},
    {name = 'Frank Noé'}
]
requires-python = ">= 3.9"
dependencies = [
    'numpy',
    'scipy>=1.9.0',
    'scikit-learn>=1.5.0',
    'threadpoolctl>=3.1.0'
]
dynamic = ['version']

[project.urls]
homepage = "https://deeptime-ml.github.io"
repository = "https://github.com/deeptime-ml/deeptime"
documentation = "https://deeptime-ml.github.io"
download = "https://pypi.org/project/deeptime/#files"

[project.optional-dependencies]
deep-learning = ['torch']
plotting = ['matplotlib', 'networkx']
units = ['pint>=0.20']
tests = [
    'torch>=1.12.0; platform_system!="Darwin" and platform_system!="Windows"',
    'pytest>=7.1.2',
    'pytest-cov>=3.0.0',
    'coverage[toml]',
    'pytest-xdist>=2.5.0',
    'flaky>=3.7.0',
    'tqdm>=4.64.0',
    "networkx",
    "matplotlib",
]
docs = [
    "sphinx",
    "nbsphinx",
    "sphinxcontrib-bibtex",
    "matplotlib",
    "networkx",
    "sphinxcontrib-katex",
    "sphinx-gallery",
    "torch",
    "memory_profiler",
    "mdshare",
    "nbconvert",
    "jupyter",
    "tqdm"
]

[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.10.1",
    "numpy",
    "scipy>=1.9.3",
    "setuptools-scm>=8",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.build-type = "Release"
wheel.packages = ["src/deeptime"]
editable.mode = "redirect"
editable.rebuild = true
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.scikit-build.cmake.define]
DEEPTIME_BUILD_CPP_TESTS = "OFF"

[tool.pytest.ini_options]
filterwarnings = ["once", "ignore::UserWarning"]

[tool.setuptools_scm]

[tool.flake8]
ignore = ['E24', 'E121', 'E123', 'E126', 'E226', 'E704', 'W503', 'W504']
max-line-length = 120

[tool.coverage.report]
exclude_lines = ["@plotting_function", "pragma: no cover"]
omit = ["tests/*"]

[tool.coverage.run]
omit = ["tests/*", "*/**/*.pyx"]

[tool.cibuildwheel]
build-verbosity = 1
