project(_markov_bindings CXX)

set(SRC src/markov_module.cpp)
pybind11_add_module(${PROJECT_NAME} ${SRC})
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include)
target_link_libraries(${PROJECT_NAME} PUBLIC deeptime::common)
if(OpenMP_FOUND)
    target_link_libraries(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX)
endif()

pybind11_add_module(_tram_bindings src/tram_module.cpp)
target_include_directories(_tram_bindings PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include)
target_link_libraries(_tram_bindings PUBLIC deeptime::numeric)
if(OpenMP_FOUND)
    target_link_libraries(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX)
endif()
